examples/test/testpolicy18483.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18483
  namespace: namespace346
spec:
  podSelector:
    matchLabels:
      key47: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value13
          key6: value2
          key38: value3
      podSelector:
        matchLabels:
          key39: value5
          key12: value23
